# rust-go-typescript

./: Cargo.toml  README.md  go.mod  go.sum  main.go  package.json
projector-go/: main.go
projector-go/projector/: config.go  config_test.go  opts.go  projector.go  projector_test.go
projector-rust/: Cargo.toml
projector-rust/src/: config.rs  lib.rs  opts.rs  projector.rs
projector-ts/src/: config.ts  index.ts  opts.ts  projector.ts
projector-ts/src/__tests__/: config.test.ts  projector.test.ts
src/: fissures.ts  main.rs  submarine.ts
src/count_trees/: count_trees.ts  main.go
src/fissures/: main.go
