[package]
name = "projector-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive"] }
collection_macros = "0.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[[bin]]
name = "projector-rust"
path = "src/bin/projector.rs"
